--- a/css/Agni.css
+++ b/css/Agni.css
@@ -1,28 +1,7 @@
-h1 {
-    font-size: 30px;
-    color: rgba(21, 80, 241, 0.959);
+body{
+    background-color: #d14635;
+}
+header{
     text-align: center;
-}
-h2 {
-    font-size: 30px;
-    color: rgba(241, 109, 21, 0.959);
-}
-
-.uppercase{
-    text-transform: uppercase;
-}
-.big{
-    font-size: 50px;
-}
-.big.uppercase{
-    font-size: 100px;
-}
-
-span{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: teal;
-}
-h2 span{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: red;
+    border: 10px solid;
 }
