--- a/css/Agni.css
+++ b/css/Agni.css
@@ -1,28 +1,68 @@
-h1 {
-    font-size: 30px;
-    color: rgba(21, 80, 241, 0.959);
+body{
+    margin: 0;
+}
+header{
+    background-color: skyblue;
     text-align: center;
 }
-h2 {
-    font-size: 30px;
-    color: rgba(241, 109, 21, 0.959);
+header img{
+    border-radius: 150px;
+    width: 150px;
+    border: 10px solid white;
 }
-
-.uppercase{
-    text-transform: uppercase;
+h2{
+    background-color: skyblue;
+    color: #2079c7;
 }
-.big{
-    font-size: 50px;
-}
-.big.uppercase{
-    font-size: 100px;
-}
-
-span{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: teal;
-}
-h2 span{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: red;
+header h1{
+    color: white;
+        font-family: "Merriweather", serif;
+        font-weight: 600;
+        font-style: normal;
+        ;
+      }
+      
+      .merriweather-regular {
+        font-family: "Merriweather", serif;
+        font-weight: 400;
+        font-style: normal;
+      }
+      
+      .merriweather-bold {
+        font-family: "Merriweather", serif;
+        font-weight: 700;
+        font-style: normal;
+      }
+      
+      .merriweather-black {
+        font-family: "Merriweather", serif;
+        font-weight: 900;
+        font-style: normal;
+      }
+      
+      .merriweather-light-italic {
+        font-family: "Merriweather", serif;
+        font-weight: 300;
+        font-style: italic;
+      }
+      
+      .merriweather-regular-italic {
+        font-family: "Merriweather", serif;
+        font-weight: 400;
+        font-style: italic;
+      }
+      
+      .merriweather-bold-italic {
+        font-family: "Merriweather", serif;
+        font-weight: 700;
+        font-style: italic;
+      }
+      
+      .merriweather-black-italic {
+        font-family: "Merriweather", serif;
+        font-weight: 900;
+        font-style: italic;
+      }
+h3{
+    font-family: 'Courier New', Courier, monospace;
 }
