--- a/css/Agni.css
+++ b/css/Agni.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    background-color: black;
 }
 header{
     background-color: skyblue;
@@ -21,48 +22,7 @@ header h1{
         font-style: normal;
         ;
       }
-      
-      .merriweather-regular {
-        font-family: "Merriweather", serif;
-        font-weight: 400;
-        font-style: normal;
-      }
-      
-      .merriweather-bold {
-        font-family: "Merriweather", serif;
-        font-weight: 700;
-        font-style: normal;
-      }
-      
-      .merriweather-black {
-        font-family: "Merriweather", serif;
-        font-weight: 900;
-        font-style: normal;
-      }
-      
-      .merriweather-light-italic {
-        font-family: "Merriweather", serif;
-        font-weight: 300;
-        font-style: italic;
-      }
-      
-      .merriweather-regular-italic {
-        font-family: "Merriweather", serif;
-        font-weight: 400;
-        font-style: italic;
-      }
-      
-      .merriweather-bold-italic {
-        font-family: "Merriweather", serif;
-        font-weight: 700;
-        font-style: italic;
-      }
-      
-      .merriweather-black-italic {
-        font-family: "Merriweather", serif;
-        font-weight: 900;
-        font-style: italic;
-      }
 h3{
+    color: white;
     font-family: 'Courier New', Courier, monospace;
 }
